syntax = "proto3";
package dadtkv;
option csharp_namespace = "Dadtkv";

import "ConsensusValueDto.proto";

service AcceptorService {
  rpc Prepare(PrepareRequestDto) returns (PrepareResponseDto);
  rpc Accept(AcceptRequestDto) returns (AcceptResponseDto);
}

message PrepareRequestDto {
  uint64 serverId = 1;
  uint64 proposalNumber = 2;
  uint64 roundNumber = 3;
}

message PrepareResponseDto {
  bool promise = 1;
  uint64 writeTimestamp = 2;
  uint64 roundNumber = 3;
  ConsensusValueDto value = 4;
}

message AcceptRequestDto {
  uint64 serverId = 1;
  uint64 proposalNumber = 2;
  uint64 roundNumber = 3;
  ConsensusValueDto value = 4;
}

message AcceptResponseDto {
  bool accepted = 1;
}
