syntax = "proto3";
package dadtkv;

option csharp_namespace = "DADTKV";

message ConsensusValueDto {
  map<string, LeaseQueueDto> leaseQueue = 1;
}

message LeaseQueueDto {
  repeated string transactionManagers = 1;
}